--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <ul>
                     <li><a href="#" ><img src="assets/images/settings.png"></a></li>
                     <li><a href="#"><img src="assets/images/circled-menu.png"></a></li>
-                    <li><a href="#"><img src="assets/images/login.png"></a></li>
+                    <li><a href="#"><img src=""></a></li>
                 </ul>
             </div>
         </div>
